objects/vlocity_ins__ContactRegulatoryAction__c.object
<CustomObject>
    <description>Represents the current and past regulatory actions taken against an insurance agent/producer. Master-detail child object of the Contact.</description>
    <fields>
        <fullName>vlocity_ins__ActionDate__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgencyIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>Agency Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Regulatory Actions</relationshipLabel>
        <relationshipName>ContactRegulatoryActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EntryDate__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InceptionCode__c</fullName>
        <label>Inception Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jurisdiction</label>
        <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
        <relationshipName>RegulatoryActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PenaltyAmount__c</fullName>
        <label>Penalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PeriodDuration__c</fullName>
        <label>Period Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PeriodStartDate__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReasonDescription__c</fullName>
        <label>Reason Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Contact Regulatory Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Regulatory Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>